# newsbot.worker

./: .dockerignore  .editorconfig  .flake8  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  app.py  docker-compose.yml  dockerfile  dockerfile_old  load.env.py  makefile  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: docker-publish.yml  lint.yaml
archive/sql/: __init__.py  db.py  exceptions.py
docs/: errors.md
jenkins/newsbot-image-build/: jenkinsfile
jenkins/newsbot-image-deploy/: jenkinsfile
mounts/icons/: readme.md
newsbot/core/: cache.py  constant.py  env.py  initdb.py  logger.py
newsbot/worker/: startup.py
newsbotWorker/api/: app.py
newsbotWorker/service/: __init__.py  apiEventsService.py  cache.py  envReaderService.py  firefoxDriverService.py  initdb.py  scheduler.py  twitchApi.py
newsbotWorkerApi/: app.py
newsbotWorkerApi/routes/: healthRoute.py  schedulerRoute.py
newsbotWorkerApiInfra/base/: __init__.py  driverBase.py  outputBase.py  sourceBase.py
newsbotWorkerApiInfra/domain/: __init__.py  (+3 more)
newsbotWorkerApiService/: cache.py  demoJobService.py  envReaderService.py  firefoxDriverService.py  initdb.py  scheduler.py  twitchApi.py
workerApi/: apiEventsService.py  app.py
workerApiModule/: readme.md
workerDatabase/: __init__.py  env.py  script.py.mako
workerService/: __init__.py  cache.py  demoJobService.py  envReaderService.py  envReaderServiceOld.py  firefoxDriverService.py  initdb.py  requestContent.py  scheduler.py  twitchApi.py
(+239 files in other folders)
